Trying to avoid weird jumps on while repainting; fix

--- a/src/public/assets/_partials/common.less
+++ b/src/public/assets/_partials/common.less
@@ -26,7 +26,6 @@ html {
 
 img, object, embed {
   max-width: 100%;
-  height: auto !important;
 }
 
 a {
