--- a/src/public/assets/_partials/elements/helpers.less
+++ b/src/public/assets/_partials/elements/helpers.less
@@ -13,6 +13,10 @@
 
 .image {
   transition: opacity 1.33s;
+
+  &.loaded {
+    height: auto !important;
+  }
 }
 
 .media {
